Added methods to make transitions easier and more explicit. Updated documentation.